# health-insurance-chatbot

./: .env.example  .gitignore  Dockerfile  MASTER_DESIGN.md  README.md  REMAINING_WORK.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  모든 코드.md  모든 테스트.md
.github/workflows/: ci.yml  quality-gates.yml
deploy/k8s/: README.md  configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  namespace.yaml
docs/: ACCURACY_REDIS_WORKER.md  COUNTER_PRODUCT_BACKLOG.md  COUNTER_UX.md  GEMINI_COST_STRATEGY.md  OCR_POLICY.md  REDIS_DESIGN.md  REPO_HYGIENE.md  RERANKER_CTO_REVIEW.md  SECRETS_OPS.md  SPRINT_Q_ACCURACY_PERF.md  SYSTEM_ADVANCEMENT.md  실행_가이드.md
docs/adr/: ADR-HWP5.md  ADR-INJECTION-SEC02.md
eval/: slo.yaml
eval/goldsets/: domain_health_insurance_v1.json  domain_health_insurance_v1_outputs.json  rerank_sample.json
eval_results/: after_api.json  after_layout_api.json  after_layout_local.json  after_local.json  after_sec02_api.json  baseline.json  baseline_api.json
files/: ir_schema.py  test_contracts.py
files (1)/: component_contracts.py  test_boundaries.py
files (2)/: acl_consistency.py  test_acl.py
files (3)/: test_concurrency.py
files (4)/: eval_harness.py  test_eval.py
files (5)/: test_capacity.py
files (6)/: README.md  pyproject.toml
frontend/: app.js  index.html  styles.css
scripts/: eval_accuracy.py  frontend_perf_check.mjs  gemini_quota_budget.py  make_eval_pdf.py  make_sample_pdf.py  poc_format_gate.py  smoke.py
src/harag/: __init__.py
tests/behavior/: test_accuracy_improvements.py  test_advancement_phase1.py  test_advancement_phase2.py  test_api_embedder_dimensions.py  test_auth_jwt.py  test_auth_sso.py  test_capacity_guard.py  test_context_compact.py  test_counter_ux_backend.py  test_delete_and_hybrid.py  test_dotenv_and_rewrite.py  test_error_codes.py  test_format_decoders.py  test_gemini_cost_guards.py  test_http_rerank.py  test_ingest_failed_reupload.py  test_ingest_metadata_persist.py  test_ingest_spool.py  test_injection.py  test_injection_redteam.py  test_knowledge_library.py  test_llm_stream_transport.py  test_metadata_store.py  test_oidc_claim_mapper.py  test_parse_chunk_redis.py  test_parser.py  test_pii.py  test_pipeline_rerank_load.py  test_qdrant_efficiency.py  (+9 more)
리랭커/: pipeline.py
성능 측정 방안/: PERFORMANCE_MEASUREMENT_PLAN.md
실제 백엔드 연결 코드(QdrantClient url, boto3, 메시지 큐)/: object_store.py
인덱싱 워커/: pipeline.py
증분 인덱싱/: worker.py
프론트엔드 성능 측정 방안/: FRONTEND_PERFORMANCE_PLAN.md
프롬프트 인젝션 방어/harag_project/: pyproject.toml
프롬프트 인젝션 방어/harag_project/docker/: Dockerfile.app  docker-compose.yml
프롬프트 인젝션 방어/harag_project/docs/: code_design_spec.md  tdd_test_spec.md
프롬프트 인젝션 방어/harag_project/src/harag/api/: main.py
프롬프트 인젝션 방어/harag_project/src/harag/eval/: perf.py
프롬프트 인젝션 방어/harag_project/src/harag/indexing/: worker.py
프롬프트 인젝션 방어/harag_project/src/harag/retrieval/: hybrid.py
프롬프트 인젝션 방어/harag_project/tests/behavior/: test_embedder.py
프롬프트 인젝션 방어/harag_project/tests/contract/: test_eval.py  test_versioning.py
(+141 files in other folders)
