[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harag"
version = "0.1.0+mvp"
description = "한글 행정문서 RAG 챗봇 (PDF 업로드 MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "pdfplumber>=0.11",
    "SQLAlchemy>=2.0",   # storage/metadata_store (운영 메타 진실원천, sqlite/postgres 공용)
    "PyJWT>=2.8",        # api/auth_jwt (JWT 서명·만료 검증)
    # boto3>=1.34,       # (선택) 운영 S3/MinIO 사용 시 storage/object_store.S3Backend에 주입
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
postgres = ["psycopg[binary]>=3.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "contract: 설계 불변식 계약 테스트(구현 무관, 항상 초록)",
    "behavior: 동작 테스트(구현을 이끔)",
    "integration: 외부 의존성(Qdrant 등) 필요",
]
